[package]
name = "emy_renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.0"
pixels = "0.9.0"
winit = "0.26.1"
winit_input_helper = "0.12.0"
log = "0.4.17"
env_logger = "0.9.0"
glam = "0.20.5"
tobj = "3.2.2"
image = "0.24.2"
clap = { version = "3.1.18", features = ["derive"] }
